--- a/src/ComputeManagement/Microsoft.WindowsAzure.Management.Compute.nuspec
+++ b/src/ComputeManagement/Microsoft.WindowsAzure.Management.Compute.nuspec
@@ -3,7 +3,7 @@
   <metadata minClientVersion="2.5">
     <id>Microsoft.WindowsAzure.Management.Compute</id>
     <title>Microsoft Azure Compute Management Library</title>
-    <version>$version$</version>
+    <version>99.0.0</version>
     <authors>Microsoft</authors>
     <owners>azure-sdk, Microsoft</owners>
     <licenseUrl>http://aka.ms/windowsazureapache2</licenseUrl>
